# CircuitPython_NAU7802

./: .pre-commit-config.yaml  LICENSE  README.rst  README.rst.license  cedargrove_nau7802.py  cedargrove_nau7802_async.py  pyproject.toml  pyproject.toml.disabled  requirements.txt  setup.py.disabled
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: clue_scale_calibrate.py  clue_scale_calibrator.py  clue_scale_code.py  clue_scale_dual_chan_bkg.bmp.license  clue_scale_dual_chan_code.py  clue_scale_single_calibrate.py  clue_scale_single_chan_code.py  dual_clue_scale_calibrator.py  dual_clue_scale_code.py  dual_clue_scale_mux_calibrator.py  dual_clue_scale_mux_code.py  nau7802_simpletest.py  xnau7802_simpletest.py
