# SPDX-FileCopyrightText: 2022 Alec Delaney for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "cedargrove-nau7802"
description = "A async CircuitPython driver class for the NAU7802 24-bit ADC"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Adafruit Industries", email = "circuitpython@adafruit.com"},
    {name = "Ben Randall", email = "veleek@gmail.com"}
]
urls = {Homepage = "https://github.com/veleek/CircuitPython_NAU7802_Async"}
keywords = [
    "adafruit",
    "nau7802",
    "adc",
    "sensor",
    "hardware",
    "micropython",
    "circuitpython",
    "asyncio",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["cedargrove_nau7802_async"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
